# condor_hardware_adapter

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
COMservice/: COMService.cpp  COMService.h
logservice/: LogService.cpp  LogService.h
udpservice/: UDPService.cpp  UDPService.h
ui/: ParameterSelector.cpp  ParameterSelector.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
